feat(santa): add sync token admin API
